Add BookList component to render list of books and add CreateNewBook component that render form with input field

--- a/src/components/Books/Books.module.css
+++ b/src/components/Books/Books.module.css
@@ -8,9 +8,9 @@
 }
 
 .book_section {
-  margin: 2.3rem 6.25rem 1rem;
   background-color: #fff;
   border: 1px solid #e8e8e8;
+  margin: 2.313rem 6.25rem;
   padding: 1.5rem 0;
 }
 
