--- a/src/components/Books/Books.module.css
+++ b/src/components/Books/Books.module.css
@@ -1,16 +1,17 @@
 .main_page {
   height: 100vh;
   background-color: #fafafa;
+  padding: 0 6.25rem;
 }
 
 .book_section_container {
-  padding-top: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .book_section {
   background-color: #fff;
   border: 1px solid #e8e8e8;
-  margin: 2.313rem 6.25rem;
   padding: 1.5rem 0;
 }
 
