--- a/src/components/Books/Books.module.css
+++ b/src/components/Books/Books.module.css
@@ -1,6 +1,5 @@
 .main_page {
   height: 100vh;
-  background-color: #fafafa;
   padding: 0 6.25rem;
 }
 
@@ -13,6 +12,7 @@
   background-color: #fff;
   border: 1px solid #e8e8e8;
   padding: 1.5rem 0;
+  margin-top: 2.375rem;
 }
 
 .book_section_container li {
