--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,15 @@
 
 .navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 6.25rem;
   height: 4.838rem;
-  border: 1px solid #e8e8e8;
+  border: 1px solid hsl(0, 0%, 91%);
   background-color: #fff;
 }
 
