--- a/src/components/Books/Books.module.css
+++ b/src/components/Books/Books.module.css
@@ -14,7 +14,7 @@
   align-items: center;
   background-color: #fff;
   border: 1px solid #e8e8e8;
-  padding: 2rem 1.188rem 1.625rem 1.688rem;
+  padding: 0 1.188rem 0 1.688rem;
   margin-top: 1.375rem;
   border-radius: 4px;
 }
@@ -27,6 +27,12 @@
 
 .book_section_container li {
   list-style: none;
+}
+
+.statusVerticalLine {
+  height: 4.875rem;
+  margin: 1.125rem 3.688rem 0 -4.938rem;
+  border: solid 1px #e8e8e8;
 }
 
 .line {
