--- a/src/components/Books/Books.module.css
+++ b/src/components/Books/Books.module.css
@@ -74,7 +74,7 @@ form {
 .titleInput {
   width: 65.3rem;
   height: 2.813rem;
-  margin: 1.188rem 2.125rem 0 0;
+  margin: 1.188rem 1.125rem 0 0;
   border-radius: 4px;
   padding: 0 1.063rem;
   border: solid 1px #e8e8e8;
@@ -99,7 +99,7 @@ form {
   width: 22.813rem;
   height: 2.813rem;
   margin: 1.188rem 2.125rem 0;
-  padding: 0.375rem 0.938rem 0.563rem 1rem;
+  padding: 0.375rem 0.338rem 0.563rem 0.5rem;
   border-radius: 4px;
   border: solid 1px #e8e8e8;
   background-color: #fff;
@@ -142,6 +142,18 @@ form {
   color: #4386bf;
 }
 
+.bookAuthor {
+  height: 1.188rem;
+  margin: 0 0.875rem 0.5rem 0;
+  font-size: 0.875rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #4386bf;
+}
+
 .bookCategory {
   height: 1.125rem;
   margin: 0 2.438rem 0 0;
@@ -152,5 +164,5 @@ form {
   font-style: normal;
   line-height: normal;
   letter-spacing: normal;
-  color: var(--black-two);
+  color: #121212;
 }
